load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

config_setting(
    name = "release",
    values = {
        "compilation_mode": "opt",
    },
)

genrule(
    name = "buildinfo",
    srcs = ["//:defs.bzl"],
    outs = ["buildinfo.txt"],
    cmd = select({
        "release": "$(location //tools:buildinfo) $(location //:defs.bzl) bazel-out/stable-status.txt release > $@",
        "//conditions:default": "$(location //tools:buildinfo) $(location //:defs.bzl) bazel-out/stable-status.txt devel > $@",
    }),
    stamp = 1,
    tools = [
        "//tools:buildinfo",
    ],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "wheels",
    srcs = [
        "//pylib/anki:wheel",
        "//qt/aqt:wheel",
    ],
    mode = "0644",
    tags = ["manual"],
)

exports_files([
    "defs.bzl",
    "package.json",
    ".prettierrc",
])
