[project]
name = "anki-dev"
version = "0.0.0"
description = "Local-only environment"
requires-python = ">=3.9"
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
  "mypy",
  "mypy-protobuf",
  "ruff",
  "pytest",
  "PyChromeDevTools",
  "wheel",
  "hatchling", # for type checking hatch_build.py files
  "mock",
  "types-protobuf",
  "types-requests",
  "types-orjson",
  "types-decorator",
  "types-flask",
  "types-flask-cors",
  "types-markdown",
  "types-waitress",
  "types-pywin32",
]
docs = [
  "sphinx",
  "myst-parser",
  "sphinx-book-theme",
  "sphinx-autoapi",
  "sphinxcontrib-rust",
]

[tool.uv.workspace]
members = ["pylib", "qt"]

[tool.uv.sources]
sphinxcontrib-rust = { git = "https://gitlab.com/andrewasanchez/sphinxcontrib-rust.git", branch = "anki-support" }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
