[project]
name = "anki-dev"
version = "0.0.0"
description = "Local-only environment"
requires-python = ">=3.10"
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
  "mypy",
  "mypy-protobuf",
  "ruff",
  "pytest",
  "PyChromeDevTools",
  "wheel",
  "hatchling", # for type checking hatch_build.py files
  "mock",
  "types-protobuf",
  "types-requests",
  "types-orjson",
  "types-decorator",
  "types-flask",
  "types-flask-cors",
  "types-markdown",
  "types-waitress",
  "types-pywin32",
  "briefcase>=0.4.0",
  "jinja2",
  "pyinstaller",
]
docs = [
  "sphinx",
  "myst-parser",
  "sphinx-book-theme",
  "sphinx-autoapi",
  "sphinx-autobuild>=2024.10.3",
]

[tool.uv.workspace]
members = ["pylib", "qt"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
