[project]
name = "anki-dev"
version = "0.0.0"
description = "Local-only environment"
requires-python = ">=3.12"
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
  "pre-commit",
  "mypy",
  "mypy-protobuf",
  "ruff",
  "pytest",
  "PyChromeDevTools",
  "wheel",
  "hatchling", # for type checking hatch_build.py files
  "mock",
  "types-protobuf",
  "types-requests",
  "types-orjson",
  "types-decorator",
  "types-flask",
  "types-flask-cors",
  "types-markdown",
  "types-waitress",
  "types-pywin32",
  "briefcase>=0.4.2",
]
docs = [
  "sphinx",
  "myst-parser",
  "sphinx-book-theme",
  "sphinx-autoapi",
  "sphinx-autobuild>=2024.10.3",
  "click-extra[sphinx]", # for GitHub alerts
  "sphinxcontrib-mermaid>=2.0.2",
]

# Local resolution guard; keep in sync with Dependabot cooldown.
[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { anki-mac-helper = false, anki-audio = false, briefcase = false }
required-version = ">=0.9.25"

[tool.uv.workspace]
members = ["pylib", "qt", "qt/installer/briefcase_plugins"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
