[workspace.package]
version = "0.0.0"
authors = ["Ankitects Pty Ltd and contributors"]
license = "AGPL-3.0-or-later"
rust-version = "1.64"
edition = "2021"

[workspace]
members = [
  "rslib-bridge",
  "build_rust"
]
exclude = ["anki"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 0
debug = 0

# Debug info off by default, which speeds up incremental builds and produces a considerably
# smaller library.
[profile.dev.package.anki]
debug = 0
[profile.dev.package.rsdroid]
debug = 0
