load("@py_deps//:requirements.bzl", "requirement")

filegroup(
    name = "ftl",
    srcs = [
        "@rslib_ftl//:files",
        "@extra_ftl//:files",
    ] + glob(["**/*.ftl"]),
    visibility = ["//rslib:__subpackages__"],
)

py_binary(
    name = "format",
    srcs = ["format.py"],
    deps = [requirement("fluent-syntax")],
)

py_test(
    name = "format_check",
    srcs = [
        "format.py",
        "format_check.py",
    ],
    # so we can locate data files
    args = ["$(location BUILD.bazel)"],
    data = glob(["**/*.ftl"]) + ["BUILD.bazel"],
    deps = [requirement("fluent-syntax")],
)

# export this file as a way of locating the top level folder in $(location ...)
exports_files(
    ["BUILD.bazel"],
    visibility = ["//rslib:__subpackages__"],
)
