[package]
name = "ftl"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "ftl-sync"
path = "sync.rs"

[dependencies]
camino = "1.1.2"
snafu = { version = "0.7.4" }
workspace-hack = { version = "0.1", path = "../tools/workspace-hack" }
