load("@rules_python//python:defs.bzl", "py_binary")
load("@py_deps//:requirements.bzl", "requirement")

py_binary(
    name = "update",
    srcs = ["update.py"],
    data = [
        "requirements.in",
        "requirements.txt",
    ],
    tags = ["manual"],
    deps = [
        requirement("pip-tools"),
    ],
)

exports_files([
    "requirements.txt",
    "licenses.json",
])
