# Copyright: Ankitects Pty Ltd and contributors
# License: GNU AGPL, version 3 or later; http://www.gnu.org/licenses/agpl.html

load("@rules_proto//proto:defs.bzl", "proto_library")
load("//proto:clang_format.bzl", "proto_format")

proto_format(
    name = "format",
    srcs = glob(["**/*.proto"]),
    visibility = ["//visibility:public"],
)

proto_library(
    name = "backend_proto_lib",
    srcs = glob(["**/*.proto"]),
    # "" removes the "proto/" prefix
    strip_import_prefix = "",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "proto",
    srcs = glob(["**/*.proto"]),
    visibility = ["//visibility:public"],
)

exports_files([
    # for external workspace use
    "format.py",
    # an empty file we use to get the root proto/ path in the Rust build
    ".top_level",
])
